--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -4,18 +4,10 @@
     border-radius: 10px;
     padding: 20%;
     margin-top: 1px;
-<<<<<<< HEAD
     border: 1px solid gray;
     background-color: black;
     background-size: cover;
-=======
-    border: 2px solid black;
     background-image: url('/dino2.jpg');
-    background-size: contain;
-    height: 97vh;
-    margin-top: 1%;
-    
->>>>>>> 8ee33406e610535eb247b3928141f0a5f6bcd18a
 }
 
 .title{
@@ -57,16 +49,11 @@
     border: 10px;
     background-color: black;
 }
-<<<<<<< HEAD
-=======
 
 .email{
     border-radius: 2px;
-    font-size: 30px;
+    border: 10px;
     margin-left: 25%;
+    font-size: 30px;
 
 }
-
-
-
->>>>>>> 8ee33406e610535eb247b3928141f0a5f6bcd18a
