--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
 }
 
 .navbar {
-    background-color: rgb(148, 148, 150);
+    background-color: rgb(0, 0, 0);
     height: 15vh;
     width: 100vw;
     display: grid;
@@ -17,13 +17,13 @@
 }
 
 .leftcontainer {
-    background-color: rgb(60, 87, 60);
+    background-color: rgba(132, 134, 134, 0.5);
     height: 100vh;
     width: 100vw;
 }
 
 .rightcontainer {
-    background-color: rgb(240, 210, 79);
+    background-color: rgb(153, 152, 152);
     height: 100vh;
     width: 80vw;
     display: grid;
@@ -83,11 +83,12 @@
     border: 1px solid black;
     background-color: white;
     margin-left: 5%;
-    border-radius: 15px;
+    border-radius: 10px;
     width: 10%;
     height: 10%;
     margin: 5px;
     padding: 5px;
+    
     
 }
 
@@ -96,3 +97,6 @@
     font-weight: bold;
 }
 
+.link{
+    margin-right: 0,1%;
+}
